package switchisep.project.dto;

public class TypologyCreationDTO {

    public String description;

    public String getDescription(){return description;}
}
