package switchisep.project.dto;

import org.springframework.hateoas.RepresentationModel;


public class TypologyDTO extends RepresentationModel<TypologyDTO> {

    public String typologyId;
    public String typologyDescription;

}
